--- a/Flow 4 projekt/kontakt.css
+++ b/Flow 4 projekt/kontakt.css
@@ -43,53 +43,48 @@ section{
 
 
 div#main{
-width:900px;
-height:650px;
- padding-left: 40%;
+justify-content: center;
+width:20%;
+height:10%;
 font-family:sans-serif
 }
 div#form_sample{
 text-align:center;
-border:1px solid #ccc;
-width:300px;
-padding:0 50px 15px;
-margin-top:20px;
-box-shadow:0 0 15px;
+border:1% solid #ccc;
+width:100%;
+padding:0 5% 2%;
+margin-top: 5%;
 border-radius:6px;
-float:left
 }
 #main h1{
-margin-top:40px
+margin-top:5%
 }
-hr{
-margin-top:-5px
-}
+
 label{
-float:left;
 font-size:16px
 }
 input[type="text"]{
 width:100%;
-margin-top:10px;
-height:35px;
-margin-bottom:25px;
-padding:10px;
-border:3px solid #ffccff
+margin-top:5%;
+height:10%;
+margin-bottom:5%;
+padding:2%;
+border:3px solid pink;
 
 }
 textarea{
 width:100%;
-border:3px solid #ffccff;
-padding:10px;
-margin-bottom:25px;
-margin-top:10px;
-height:100px;
+border:3px solid pink;
+padding:5%;
+margin-bottom:5%;
+margin-top:5%;
+height:100%;
 resize:none
 }
 input[type="submit"]{
 width:100%;
-padding:10px 45px;
-background-color:#ffccff;
+padding:5% 7%;
+background-color:pink;
 border:none;
 color:#808080;
 font-size:18px;
